Outline of landing page done

--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,15 @@
     font-weight: 370;
     font-style: normal;
 }
-  
 
 .text-small {
     font-size: 85%;
 }
 
+.form-check-input{
+
+}
+
+.form-check-label{
+    
+}
