--- a/pisrat/styles.css
+++ b/pisrat/styles.css
@@ -1,3 +1,58 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
+*{
+    font-family: "Jersey 10", serif;
+}
 body{
-    background-color: red;
+    background-color: rgb(0, 0, 0);
+}
+
+#box1{
+    background-color: white;
+    width: 200px
+    height 200px;
+    border: 5px;
+    font-size: 100px;
+    text-align: center;
+}
+
+p{
+    color: white;
+    font-size: 100px;
+    border-style: dashed;
+    padding: 10px;
+    margin-top: 10px;
+
+}
+
+#bottom{
+    color: red;
+    margin-top: -90px;
+    font-size: 20px;
+    text-align: center;
+}
+
+button{
+    font-size: 80px;
+    width: 1400px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: -10px;
+    background-color: rgb(38, 0, 255);
+}
+
+button:hover{
+background-color: white;
+}
+
+button:active{
+    background-color: rgb(51, 255, 0);
+}
+
+#luke{
+    width: 100px;
+    height: 100px;
+    position: relative;
+    top: -720px;
+    right: -5px;
 }
